@@ -2,7 +2,7 @@
         "http://www.w3.org/TR/1999/REC-html401-19991224/loose.dtd">
 <html>
 <head>
-<base href="http://dev.clotho.com/code/CGI-Compress-Gzip/index.html">
+<base href="http://www.clotho.com/code/CGI-Compress-Gzip/index.html">
 <title>CGI-Compress-Gzip</title>
 <link href="/css/demo.css" rel="stylesheet" type="text/css">
 <script language="JavaScript" src="/js/demo.js" type="text/javascript"></script>
@@ -37,7 +37,7 @@ a:hover {
 
 <p class="title">CGI-Compress-Gzip</p>
 
-<p class="subtitle">Last update: <a href="gpl/CGI-Compress-Gzip-0.15-docs">v0.15</a>, 2003-12-30</p>
+<p class="subtitle">Last update: <a href="gpl/CGI-Compress-Gzip-0.16-docs">v0.16</a>, 2004-01-02</p>
 
 
 
@@ -70,6 +70,38 @@ modules, although those offer less control to the programmer.
       <tr>
         <td valign="top"><a href="#gpl">GPL</a></td>
         <td valign="top">
+          <a href="gpl/CGI-Compress-Gzip-0.16.tgz">CGI-Compress-Gzip-0.16.tgz</a>
+          (<a href="gpl/CGI-Compress-Gzip-0.16.tgz.md5">MD5</a>)
+          <br>
+          <a href="gpl/CGI-Compress-Gzip-0.16.zip">CGI-Compress-Gzip-0.16.zip</a>
+          (<a href="gpl/CGI-Compress-Gzip-0.16.zip.md5">MD5</a>)
+          
+            <br>
+            <a href="gpl/CGI-Compress-Gzip-0.16-docs">CGI-Compress-Gzip-0.16-docs</a>
+          
+        </td>
+        <td valign="top">Fri Jan  2 15:14:41 2004</td>
+      </tr>
+    
+      <tr>
+        <td valign="top"><a href="#lic">Clotho</a></td>
+        <td valign="top">
+          <a href="clotho/CGI-Compress-Gzip-0.16.tgz">CGI-Compress-Gzip-0.16.tgz</a>
+          (<a href="clotho/CGI-Compress-Gzip-0.16.tgz.md5">MD5</a>)
+          <br>
+          <a href="clotho/CGI-Compress-Gzip-0.16.zip">CGI-Compress-Gzip-0.16.zip</a>
+          (<a href="clotho/CGI-Compress-Gzip-0.16.zip.md5">MD5</a>)
+          
+            <br>
+            <a href="clotho/CGI-Compress-Gzip-0.16-docs">CGI-Compress-Gzip-0.16-docs</a>
+          
+        </td>
+        <td valign="top">Fri Jan  2 15:14:41 2004</td>
+      </tr>
+    
+      <tr>
+        <td valign="top"><a href="#gpl">GPL</a></td>
+        <td valign="top">
           <a href="gpl/CGI-Compress-Gzip-0.15.tgz">CGI-Compress-Gzip-0.15.tgz</a>
           (<a href="gpl/CGI-Compress-Gzip-0.15.tgz.md5">MD5</a>)
           <br>
@@ -80,7 +112,7 @@ modules, although those offer less control to the programmer.
             <a href="gpl/CGI-Compress-Gzip-0.15-docs">CGI-Compress-Gzip-0.15-docs</a>
           
         </td>
-        <td valign="top">Tue Dec 30 11:54:27 2003</td>
+        <td valign="top">Tue Dec 30 13:56:11 2003</td>
       </tr>
     
       <tr>
@@ -96,7 +128,7 @@ modules, although those offer less control to the programmer.
             <a href="clotho/CGI-Compress-Gzip-0.15-docs">CGI-Compress-Gzip-0.15-docs</a>
           
         </td>
-        <td valign="top">Tue Dec 30 11:54:27 2003</td>
+        <td valign="top">Tue Dec 30 13:56:11 2003</td>
       </tr>
     
       <tr>
